--- a/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.scss
@@ -45,11 +45,11 @@ button {
 
     display: flex;
     flex-wrap: wrap;
-    row-gap: sizeHeight(24);
 
     .item {
       height: sizeHeight(40);
       width: 50%;
+      margin-bottom: sizeHeight(24);
 
       display: flex;
       align-items: center;
