--- a/src/app/@shared/step-progress-bar/step-progress-bar.component.html
+++ b/src/app/@shared/step-progress-bar/step-progress-bar.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-  <div style="position: absolute; width: 100%; height: 100%">
-    <hr>
-  </div>
-  <div class="step" *ngFor="let n of numbers; index as i" [class.active]="i<=activeStepIndex">
-    <img class="checkbox" *ngIf="i < activeStepIndex" src="assets/Icons/step-progress/checkbox.svg">
-    <div *ngIf="i == activeStepIndex" class="white-circle">
+  <ng-container *ngFor="let n of numbers; index as i">
+    <div class="step" [class.active]="i<=activeStepIndex">
+      <img class="checkbox" *ngIf="i < activeStepIndex" src="assets/Icons/step-progress/checkbox.svg">
+      <div *ngIf="i == activeStepIndex" class="white-circle"></div>
     </div>
-  </div>
+    <div class="line"></div>
+  </ng-container>
 </div>
