--- a/src/global.scss
+++ b/src/global.scss
@@ -52,7 +52,7 @@ html, body, .ion-app, .ion-content {
     width: 100%;
     height: 58%;
     border-radius: sizeWidth(15);
-    background: #1C1F2B;
+    background: var(--bg-body-color);
     overflow: hidden;
   }
 }
