--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -3,14 +3,14 @@
   box-sizing: border-box;
 }
 
-.point {
-  position: absolute;
-  background: green;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  z-index: 999;
-}
+//.point {
+//  position: absolute;
+//  background: green;
+//  width: 20px;
+//  height: 20px;
+//  border-radius: 50%;
+//  z-index: 999;
+//}
 
 .container {
   display: flex;
@@ -102,14 +102,45 @@
       width: 100%;
       height: 100%;
       margin: auto;
+
+      &__map {
+        height: fit-content;
+        transition: .5s;
+      }
     }
 
     img {
       width: 100%;
-      height: 100%;
       margin: auto;
       will-change: transform;
       -webkit-backface-visibility: hidden;
     }
+
+    .point {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: red;
+      border-radius: 50%;
+    }
+
+    .svg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+
+      ::ng-deep {
+        .nav-point {
+          fill: white;
+        }
+
+        .car-point {
+          fill: black;
+        }
+      }
+    }
   }
 }
+
+
+
