--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
@@ -117,6 +117,13 @@ span {
       .title {
         color: var(--text-accent-color);
       }
+
+      &__item {
+        .icon {
+          color: var(--text-alwaysWhite-color);
+          background: var(--border-blue-color);
+        }
+      }
     }
 
     .chart {
