--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -9,7 +9,7 @@
         }"
       ></svg-icon>
     </div>
-    <div class="title">{{(tabsService.inProgressItems$ | async)[0].num}}</div>
+    <div class="title">{{(tabsService.currentTask$ | async)?.num}}</div>
   </app-header>
   <div [style]="transformStyle" class="box">
     <div [style]="rotationStyle" class="entry-box">
