--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
@@ -1,62 +1,32 @@
 <div class="container">
   <app-header>
-    <div
-      class="tab-btn"
-      [class.tab-btn_active]="i === (currentTab$ | async)"
-      *ngFor="let tab of (tabs$ | async); let i = index"
-      (click)="changeTab(i)"
-    >{{tab}}</div>
+    <div class="title">Задания</div>
   </app-header>
   <div class="content">
-    <ng-container
-      [ngSwitch]="(currentTab$ | async)"
-    >
-      <div
-        class="tab"
-        *ngSwitchCase="0"
-      >
-        <app-tabs-tasks-card
-          *ngFor="let item of (newItems$ | async)"
-          [data]="item"
-        ></app-tabs-tasks-card>
+    <div class="tab">
+      <app-tabs-tasks-card
+        *ngFor="let item of (tabsService.newItems$ | async); let i = index"
+        [data]="item"
+        [isActive]="true"
+      ></app-tabs-tasks-card>
 
-        <div
-          class="circle-btn"
-          (click)="openChooseOverlay()"
-        >
-          <svg-icon
-            [svgStyle]="{
-              'height': '2.6vh',
-              'width': '4vh'
-            }"
-            src="assets/Icons/tabs/tasks-tab/accept.svg"
-          ></svg-icon>
-        </div>
-      </div>
+      <app-tabs-tasks-card
+        *ngFor="let item of (tabsService.inProgressItems$ | async); let i = index"
+        [data]="item"
+      ></app-tabs-tasks-card>
 
       <div
-        class="tab"
-        *ngSwitchCase="1"
+        class="circle-btn"
+        (click)="openMap()"
       >
-        <app-tabs-tasks-card
-          *ngFor="let item of (inProgressItems$ | async); let i = index"
-          [data]="item"
-          [isActive]="i === 0"
-        ></app-tabs-tasks-card>
-
-        <div
-          class="circle-btn"
-          (click)="openMap()"
-        >
-          <svg-icon
-            [svgStyle]="{
+        <svg-icon
+          [svgStyle]="{
               'height': '4.8vh',
               'width': '4.8vh'
             }"
-            src="assets/Icons/tabs/tasks-tab/geo-map.svg"
-          ></svg-icon>
-        </div>
+          src="assets/Icons/tabs/tasks-tab/geo-map.svg"
+        ></svg-icon>
       </div>
-    </ng-container>
+    </div>
   </div>
 </div>
