--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
@@ -11,6 +11,7 @@
         [ngClass]="{
             noneDisplay: item?.specialProps?.includes('elk')
         }"
+        (click)="openMap()"
       ></app-tabs-tasks-card>
 
       <app-tabs-tasks-card
