--- a/src/app/pages/map/components/resolve-task/resolve-task.component.scss
+++ b/src/app/pages/map/components/resolve-task/resolve-task.component.scss
@@ -31,6 +31,7 @@
     height: sizeHeight(74);
     width: 100%;
     margin-top: auto;
+    padding: 0 sizeWidth(10);
 
     display: flex;
     align-items: center;
@@ -41,6 +42,7 @@
 
     font-size: sizeHeight(30);
     color: var(--text-alwaysWhite-color);
+    text-align: center;
 
     svg-icon {
       display: flex;
