--- a/src/app/pages/end-task/end-task.component.html
+++ b/src/app/pages/end-task/end-task.component.html
@@ -57,7 +57,7 @@
     </div>
 
     <button class="btn btn_active" (click)="nextTask()">
-      <span>{{((this.tabsService.newItems$ | async).length === 0)? 'Завершить все задания' : (this.tabsService.newItems$ | async)[1]?.specialProps?.includes('elk') ? 'Завершить заданиe' : 'Следующее задание'}}</span>
+      <span>{{((this.tabsService.newItems$ | async).length === 0) || (this.tabsService.newItems$ | async)[1]?.specialProps?.includes('elk')? 'Завершить все задания' : 'Следующее задание'}}</span>
     </button>
     <button class="btn" disabled>Завершить задание</button>
   </div>
