--- a/src/app/@shared/dropdown/dropdown.component.html
+++ b/src/app/@shared/dropdown/dropdown.component.html
@@ -2,6 +2,7 @@
   <input
     (click)="toggleDropdown()"
     (focusout)="closeDropdown()"
+    readonly
     type="text"
     class="dropdown__current"
   />
