--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
@@ -39,6 +39,7 @@
     overflow: auto;
 
     .tab {
+      height: 100%;
       width: sizeWidth(660);
       margin-top: sizeHeight(15);
 
@@ -50,6 +51,19 @@
       .extra-info {
         font-size: sizeHeight(30);
         color: var(--text-subscript-color);
+      }
+
+      .no-task-msg {
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .msg {
+          font-size: sizeHeight(34);
+          color: var(--text-subscript-color);
+        }
       }
 
       .item {
@@ -108,7 +122,7 @@
         align-items: center;
         justify-content: center;
 
-        background: var(--bg-dashboard-color);
+        background: var(--bg-body-color);
 
         font-size: sizeHeight(40);
         color: var(--text-alwaysWhite-color);
